--- a/style1(keyframes).css
+++ b/style1(keyframes).css
@@ -6,7 +6,7 @@
 
 .default1 {
   animation-name: default1;         
-  animation-duration: 2s;             
+  animation-duration: 1s;             
   animation-fill-mode: forwards;
 }
 
